--- a/Setup/index.html
+++ b/Setup/index.html
@@ -47,11 +47,11 @@
             <button id="give-up" @click="giveUp">GIVE UP</button>
         </div>
     </section>
-    <section class="row log">
+    <section class="row log" v-if="turns.length > 0">
         <div class="small-12 columns">
-            <ul>
-                <li>
-
+            <ul v-for = "turn in turns">
+                <li :class="{'player-turn' : turn.isPlayer , 'monster-turn': !turn.isPlayer}">
+                   {{ turn.message }}
                 </li>
             </ul>
         </div>
